--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
     <div class="loading">
       <span class="loader"></span>
     </div>
-    <div class="container">
-      <div
-        class="title w-100 d-flex align-items-center justify-content-center mb-3 px-4"
+    <div
+      class="title w-100 d-flex align-items-center justify-content-center mb-3 px-4"
+    >
+      <h1
+        class="text-center fs-5 my-3 py-2 px-5 rounded-1 shadow-sm"
+        style="width: fit-content"
       >
-        <h1
-          class="text-center fs-5 my-3 py-2 px-5 rounded-1 shadow-sm"
-          style="width: fit-content"
-        >
-          CRUD APP
-        </h1>
-      </div>
-      <form action class="row mt-5 pt-5">
+        CRUD APP
+      </h1>
+    </div>
+    <div class="container">
+      <form action class="formInputs row mt-4 pt-5">
         <div class="col-md-6 col-12">
           <div class="mb-3 w-100 mx-auto inputDiv">
             <p for="productName" class="mb-1 ms-2">Product Name :</p>
@@ -43,7 +43,7 @@
               class="w-100 alert alert-danger py-1 mt-1 d-none"
               id="messageName"
             >
-              It must start with a letter ,be 3 to 20 characters long,and can
+              It must start with a letter ,be 3 to 100 characters long,and can
               only contain letters or numbers or underscores
             </div>
           </div>
